--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,4 +1,15 @@
 pt-BR:
+  activerecord:
+    errors:
+      models:
+        spree/product_review:
+          attributes:
+            user_id:
+              taken: "já votou nesse produto"
+        # spree/review_feedback:
+        #   attributes:
+        #     user_id:
+        #       taken: "já votou nessa avaliação"
   rate_this_product: "Avalie esse Produto"
   rating: "Avaliar o produto %{name}"
   review_successfully_submitted: "Avaliação submetida com sucesso"
